# tweetimagedownloaderbot

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml
bot/: downloader.py
common/: botexception.py
helper/: twittermanager.py
tests/: test_tweetimagedownloaderbot.py
