[tool.poetry]
name = "tweetimagedownloaderbot"
version = "0.1.0"
description = ""
authors = ["chika <fumifumibot2323@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.0.0"
py-cord = "2.0.0b4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
mypy = "^0.910"
isort = "^5.9.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
